# iMe-Desktop

./: LEGAL  LICENSE  README.md
Telegram/codegen/codegen/common/: CMakeLists.txt  basic_tokenized_file.cpp  basic_tokenized_file.h  checked_utf8_string.cpp  checked_utf8_string.h  clean_file.cpp  clean_file.h  clean_file_reader.h  const_utf8_string.h  cpp_file.cpp  cpp_file.h  logging.cpp  logging.h
Telegram/codegen/codegen/emoji/: CMakeLists.txt  data.cpp  data.h  data_old.cpp  data_old.h  data_read.cpp  data_read.h  generator.cpp  generator.h  main.cpp  options.cpp  options.h  replaces.cpp  replaces.h
Telegram/codegen/codegen/lang/: CMakeLists.txt  generator.cpp  generator.h  main.cpp  options.cpp  options.h  parsed_file.cpp  parsed_file.h  processor.cpp  processor.h
Telegram/codegen/codegen/style/: CMakeLists.txt  generator.cpp  generator.h  main.cpp  module.cpp  module.h  options.cpp  options.h  parsed_file.cpp  parsed_file.h  processor.cpp  processor.h  structure_types.cpp  structure_types.h
Telegram/lib_base/: CMakeLists.txt  create.bat
Telegram/lib_base/base/: algorithm.cpp  algorithm.h  algorithm_tests.cpp  assertion.cpp  assertion.h  base_file_utilities.cpp  base_file_utilities.h  base_pch.h  basic_types.h  binary_guard.h  build_config.h  bytes.cpp  bytes.h  call_delayed.cpp  call_delayed.h  concurrent_timer.cpp  concurrent_timer.h  const_string.h  crash_report_header.cpp  crash_report_header.h  crash_report_writer.cpp  crash_report_writer.h  crc32hash.cpp  crc32hash.h  custom_app_icon.h  debug_log.cpp  debug_log.h  enum_mask.h  event_filter.cpp  event_filter.h  expected.h  file_lock.h  file_lock_posix.cpp  file_lock_win.cpp  flags.h  flags_tests.cpp  flat_map.h  flat_map_tests.cpp  flat_set.h  flat_set_tests.cpp  (+55 more)
Telegram/lib_base/base/platform/: base_platform_custom_app_icon.h  base_platform_file_utilities.cpp  base_platform_file_utilities.h  base_platform_global_shortcuts.h  base_platform_info.h  base_platform_last_input.h  base_platform_layout_switch.h  base_platform_network_reachability.cpp  base_platform_network_reachability.h  base_platform_power_save_blocker.h  base_platform_process.h  base_platform_system_media_controls.h  base_platform_url_scheme.h
Telegram/lib_base/base/qt/: qt_common_adapters.h  qt_key_modifiers.h  qt_string_view.h
Telegram/lib_crl/: CMakeLists.txt
Telegram/lib_crl/crl/: crl.h  crl_async.h  crl_fp_exceptions.h  crl_object_on_queue.h  crl_object_on_thread.cpp  crl_object_on_thread.h  crl_on_main.h  crl_queue.h  crl_semaphore.h  crl_time.cpp  crl_time.h
Telegram/lib_crl/crl/common/: crl_common_config.h  crl_common_fp_exceptions.cpp  crl_common_guards.h  crl_common_list.cpp  crl_common_list.h  crl_common_object_async.h  crl_common_on_main.cpp  crl_common_on_main.h  crl_common_on_main_guarded.h  crl_common_queue.cpp  crl_common_queue.h  crl_common_sync.h  crl_common_utils.h
Telegram/lib_crl/crl/dispatch/: crl_dispatch_async.cpp  crl_dispatch_async.h  crl_dispatch_on_main.h  crl_dispatch_queue.cpp  crl_dispatch_queue.h  crl_dispatch_semaphore.cpp  crl_dispatch_semaphore.h
Telegram/lib_crl/crl/linux/: crl_linux_time.cpp
Telegram/lib_crl/crl/mac/: crl_mac_time.cpp
Telegram/lib_crl/crl/qt/: crl_qt_async.cpp  crl_qt_async.h  crl_qt_guards.h  crl_qt_semaphore.cpp  crl_qt_semaphore.h
Telegram/lib_crl/crl/winapi/: crl_winapi_async.cpp  crl_winapi_async.h  crl_winapi_dll.h  crl_winapi_fp_exceptions.cpp  crl_winapi_fp_exceptions.h  crl_winapi_list.cpp  crl_winapi_list.h  crl_winapi_semaphore.cpp  crl_winapi_semaphore.h  crl_winapi_time.cpp
Telegram/lib_lottie/: CMakeLists.txt
Telegram/lib_lottie/lottie/: lottie_animation.cpp  lottie_animation.h  lottie_common.cpp  lottie_common.h  lottie_icon.cpp  lottie_icon.h  lottie_multi_player.cpp  lottie_multi_player.h  lottie_player.h  lottie_single_player.cpp  lottie_single_player.h
Telegram/lib_lottie/lottie/details/: lottie_cache.cpp  lottie_cache.h  lottie_cache_frame_storage.cpp  lottie_cache_frame_storage.h  lottie_frame_provider.h  lottie_frame_provider_cached.cpp  lottie_frame_provider_cached.h  lottie_frame_provider_cached_multi.cpp  lottie_frame_provider_cached_multi.h  (+6 more)
Telegram/lib_qr/: CMakeLists.txt
Telegram/lib_qr/qr/: qr_generate.cpp  qr_generate.h
Telegram/lib_rpl/: CMakeLists.txt
Telegram/lib_rpl/rpl/: after_next.h  before_next.h  combine.h  combine_previous.h  complete.h  conditional.h  consumer.h  deferred.h  distinct_until_changed.h  event_stream.h  fail.h  filter.h  flatten_latest.h  lifetime.h  map.h  mappers.h  merge.h  never.h  operators_tests.cpp  producer.h  producer_tests.cpp  range.h  rpl.h  skip.h  take.h  then.h  type_erased.h  variable.h  variable_tests.cpp
Telegram/lib_spellcheck/: CMakeLists.txt  README.md
Telegram/lib_spellcheck/spellcheck/: spellcheck_pch.h  spellcheck_types.h  spellcheck_utils.cpp  spellcheck_utils.h  spellcheck_value.cpp  spellcheck_value.h  spelling_highlighter.cpp  spelling_highlighter.h  spelling_highlighter_helper.cpp  spelling_highlighter_helper.h
Telegram/lib_storage/: CMakeLists.txt
Telegram/lib_storage/storage/: storage_clear_legacy.cpp  storage_clear_legacy.h  storage_clear_legacy_posix.cpp  storage_clear_legacy_win.cpp  storage_databases.cpp  storage_databases.h  storage_encrypted_file.cpp  storage_encrypted_file.h  storage_encryption.cpp  storage_encryption.h  storage_pch.h
Telegram/lib_tl/: CMakeLists.txt
Telegram/lib_tl/tl/: generate_tl.py  tl_basic_types.cpp  tl_basic_types.h  tl_boxed.h  tl_type_owner.h
Telegram/lib_waylandshells/: CMakeLists.txt
Telegram/lib_waylandshells/waylandshells/: xdg_shell.cpp  xdg_shell.h
Telegram/lib_webrtc/: CMakeLists.txt
Telegram/lib_webrtc/webrtc/: webrtc_audio_input_tester.cpp  webrtc_audio_input_tester.h  webrtc_create_adm.cpp  webrtc_create_adm.h  webrtc_media_devices.cpp  webrtc_media_devices.h  webrtc_pch.h  webrtc_video_track.cpp  webrtc_video_track.h
Telegram/lib_webview/: CMakeLists.txt  ForceStaticLink.targets
Telegram/lib_webview/webview/: webview_dialog.cpp  webview_dialog.h  webview_embed.cpp  webview_embed.h  webview_interface.h
(+134 files in other folders)
